# flatfont

./: README.md  flatfont.fbs
python/: ffufo.py  ufoff.py
python/FlatFont/Ufo/: FontInfo.py  Guideline.py  OpenTypeGaspRangeRecord.py  OpenTypeNameRecord.py  WidthClass.py  WoffMetadataCopyright.py  WoffMetadataCredit.py  WoffMetadataCredits.py  WoffMetadataDescription.py  WoffMetadataExtension.py  WoffMetadataExtensionItem.py  WoffMetadataExtensionName.py  WoffMetadataExtensionValue.py  WoffMetadataLicense.py  WoffMetadataLicensee.py  WoffMetadataText.py  WoffMetadataTrademark.py  WoffMetadataUniqueID.py  WoffMetadataVendor.py
python/json/: ufoff.json
schemas/: plist.fbs
schemas/ufo/: base.fbs  fontinfo.fbs  glyph.fbs  metainfo.fbs  misc.fbs  plist.fbs
ufoff/: Cargo.toml  README.md
ufoff-macros/: Cargo.toml
ufoff-macros/src/: lib.rs
ufoff/src/: flatfont_generated.rs  fontinfo_generated.rs  main.rs
ufoff/src/flatbuffers_generated/: mod.rs
ufoff/src/flatbuffers_generated/flat_font/ufo/: font_info_generated.rs  guideline_generated.rs  open_type_gasp_range_record_generated.rs  open_type_name_record_generated.rs  transform_generated.rs  woff_metadata_copyright_generated.rs  woff_metadata_credit_generated.rs  woff_metadata_credits_generated.rs  woff_metadata_description_generated.rs  woff_metadata_extension_generated.rs  woff_metadata_extension_item_generated.rs  woff_metadata_extension_name_generated.rs  woff_metadata_extension_value_generated.rs  woff_metadata_license_generated.rs  woff_metadata_licensee_generated.rs  woff_metadata_text_generated.rs  (+3 more)
