[package]
name = "ufoff-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.81", features = ["full", "extra-traits"] }
quote = "1.0.10"
flatbuffers = "2.0.0"